# EnviaFolha

./: .dockerignore  .env.docker.example  .env.example  .env.postgres  .env.production.example  .gitignore  ANALISE_FLUXO_ENVIO_PROBLEMAS.md  BANCO_DADOS_UNIFICADO.md  CLEANUP_REPORT.md  DEPLOY_PRODUCAO.md  DOCKER_TEST.md  Dockerfile  ESTRUTURA_DEPLOY.md  ESTRUTURA_FILTROS_OVERVIEW.md  FIX_CPF_DUPLICATE_IMPORT.md  IMPORTACAO_E_LOGS.md  LOAD_BALANCING_IMPLEMENTATION.md  Makefile  PRE_IMPLEMENTATION_MULTI_INSTANCE.md  README.md  analyze_pdf.py  analyze_unknown_pdfs.py  app.py  check_users.py  compare_regex_impact.py  debug.py  deploy.bat  deploy.sh  docker-compose.postgres.yml  docker-compose.prod.yml  docker-compose.yml  env_evolution.example  exemplo.env  fix_delay_logic.py  fix_ui.js  generate_validation_report.py  manus.py  migrate_created_by.py  move_to_backup.py  mover_modal.js  (+9 more)
backend/: .dockerignore  .env.example  DELAY_FIX.md  Dockerfile  Dockerfile.prod  FIX_HR_INDICATORS_TABLE.md  MIGRATION_COMPLETE.md  MIGRATION_ROADMAP.md  NOVAS_COLUNAS_SUGERIDAS.md  PHASE_2_1_SUMMARY.md  PHASE_2_2_SUMMARY.md  REFACTORING_PLAN.md  RELATORIOS_IMPLEMENTATION.md  STATUS_COLABORADORES_MAPEAMENTO.md  add_company_field.py  analyze_consolidated_columns.py  analyze_employee_status.py  analyze_headers_only.py  analyze_ifood_benefits.py  analyze_timecard.py  analyze_unknown_pdfs.py  check_13_ferias_values.py  check_13_nov_dec.py  check_all_situations.py  check_all_values.py  check_csv_stats.py  check_csv_status.py  check_db.py  check_ferias_data.py  check_gratif_db.py  check_new_fields.py  (+110 more)
(+219 files in other folders)
