[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-envio-rh"
version = "2.0.0"
description = "Sistema de Envio de Holerites e Comunicados"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "pandas==2.2.0",
    "PyPDF2==3.0.1",
    "openpyxl==3.1.2",
    "phonenumbers==8.13.26",
    "aiofiles==23.2.1",
    "python-dateutil==2.8.2",
    "psycopg2-binary==2.9.9",
    "email-validator==2.1.0",
]
